--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -6,10 +6,10 @@ header.header.brd
         a(href="#").circle-ico.circle-ico--gray-border
           +svg(val)
   include ../components/lang/lang.pug
-  button(type="button" data-parrent-node-popup).btn--res.button-circle.header__call-form
+  button(type="button" data-parrent-node-popup).button-circle--black.btn--res.button-circle.header__call-form
     <svg width="71" class='button-circle__ico' height="52" viewBox="0 0 71 52" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <circle cx="45" cy="26" r="25" stroke="black"/>
-      <path d="M0 25.5L45 25.5M45 25.5L38.3182 18M45 25.5L38.3182 33" stroke="black"/>
+      <circle cx="45" cy="26" r="25" />
+      <path d="M0 25.5L45 25.5M45 25.5L38.3182 18M45 25.5L38.3182 33" />
     </svg>
     span.button-circle__text замовити дзвінок
   a(href="tel:+1234567890").header__call.call-link
