--- a/src/assets/styles/pages/home.scss
+++ b/src/assets/styles/pages/home.scss
@@ -1,11 +1,14 @@
-.home-section-custom-1__btn{
-
-}
 .logo-perfect--size{
-  width: 115px;
-  height: 55px;
+  width: 180px;
+  height: 81px;
 }
 .logo-saga--size{
   width: 100px;
   height: 100px;
+}
+
+.home-section-live-list{
+  li{
+    width: 50%;
+  }
 }
