--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -38,15 +38,15 @@ block content
   section.home-section.home-section-live
     .title-wrap
       h2.title Жити
-    ul.info-list
+    ul.home-section-live-list.info-list.df.fww
       each v, i in [1, 2, 3, 4, 5, 6]
         +infoItem(liveText[i], 'iro_0'+v, 'info-list-item--black')
   // -----------------------------------
   // -----------------------------------
-  section.home-section.home-section-works
+  section.home-section.home-section-works.df.fdc.jcc
     .title-wrap
       h2.title Працювати
-    ul.info-list
+    ul.info-list.home-section-works-list.df.fdc
       each v, i in [1, 2, 3, 4]
         +infoItem(workText[i], 'home_work_0'+v, 'info-list-item--black')
   // -----------------------------------
@@ -116,7 +116,7 @@ block content
   section.home-section.home-section-developers
     .title-wrap
       h2.title Забудовники
-    ul.home-section-developers-list
+    ul.home-section-developers-list.df
       li.home-section-developers-item
         +img('logo-perfect.svg').home-section-developers-item__img.logo-perfect--size
         h5.home-section-developers-item__title Perfect Group
@@ -139,7 +139,7 @@ block content
       h2.title Контакти
   .contact-block
     .contact-block__l.brd
-      address.contact-location
+      address.contact-location.df.fdc.aifs
         span.contact-location__label Розташування:
         p.contact-location__adress Київ, Шевченківський район, вул. Богдана Хмельницкого, 16-22
         a(href="https://goo.gl/maps/FzURhcCMKHm3cupV6" rel="nofollow" target="_blank").tdn.button-circle.button-circle--black.home-section-appartments__btn
@@ -148,9 +148,9 @@ block content
             <path d="M0 25.5L45 25.5M45 25.5L38.3182 18M45 25.5L38.3182 33"/>
           </svg>
           span.button-circle__text Показати на Google Maps
-      .contact-schedule
-        span.contact-schedule__label Відділ продажів:
-        .contact-schedule-l
+      .contact-schedule.df.fww
+        span.contact-schedule__label.w100p Відділ продажів:
+        .contact-schedule-l.df.fdc
           a(href="tel:+1234567890").contact-schedule__phone +1234567890
           a(href="mailto:info@kyivproekt.ua").contact-schedule__mail info@kyivproekt.ua
         .contact-schedule-r
@@ -158,19 +158,19 @@ block content
             li Пн-пт: 09:00-19:00
             li СБ: 09:00-17:00
             li ВС: вихідний
-  .contact-block__r.brd
-    form(data-home-contact autocomplete="off")
-      .form-field.form-field-input(data-field-input data-field-name data-status="field--inactive")
-        input(type='text' name="name").form-field__input
-        .input-message(data-input-message) Ім’я:*
-      .form-field.disabled.form-field-input(data-field-input data-field-phone data-status="field--inactive")
-        input(type='text' name="phone").form-field__input
-        .input-message(data-input-message) Телефон:*
-      button( type="submit" data-btn-submit).home-content__link.link
-        span(data-btn-submit-text).link__text.usn Надіслати
-        span.link-ico.link-ico--margin
-          span.link-ico__stic.bgc--wc
-    .toast-wrapper(data-toast-wrapper)
+    .contact-block__r.brd
+      form(data-home-contact autocomplete="off")
+        .form-field.form-field-input(data-field-input data-field-name data-status="field--inactive")
+          input(type='text' name="name").form-field__input
+          .input-message(data-input-message) Ім’я:*
+        .form-field.disabled.form-field-input(data-field-input data-field-phone data-status="field--inactive")
+          input(type='text' name="phone").form-field__input
+          .input-message(data-input-message) Телефон:*
+        button( type="submit" data-btn-submit).home-content__link.link
+          span(data-btn-submit-text).link__text.usn Надіслати
+          span.link-ico.link-ico--margin
+            span.link-ico__stic.bgc--wc
+      .toast-wrapper(data-toast-wrapper)
 block footer
   include ../includes/footer.pug
 
