--- a/src/assets/styles/assets/vars.scss
+++ b/src/assets/styles/assets/vars.scss
@@ -36,4 +36,6 @@ $color-gray: rgba(233, 233, 233, 1);
   --color-architecture: rgba(253, 198, 12, 1);
   --color-white: rgba(255, 255, 255, 1);
   --color-gray: rgba(233, 233, 233, 1);
+
+  --home-sec-mb: 60px;
 }
