--- a/src/assets/styles/assets/interface.scss
+++ b/src/assets/styles/assets/interface.scss
@@ -97,7 +97,14 @@
   }
 }
 
+.title--white{
+  color: white
+}
+.title--black{
+  color: white
+}
 .title{
+  margin-bottom: 50px;
   font-weight: 300;
   font-size: 48px;
   line-height: 1em;
@@ -105,8 +112,4 @@
 
   text-align: center;
   text-transform: uppercase;
-
-  /* TECHNOLOGY */
-
-  color: #000000;
 }
