--- a/src/assets/styles/pages/home.scss
+++ b/src/assets/styles/pages/home.scss
@@ -12,3 +12,125 @@
     width: 50%;
   }
 }
+
+.home-section-live {
+  margin-bottom: var(--home-sec-mb);
+  padding-top: min(vw(176), 176px);
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
+  min-height: 1440px;
+  background: #e5e5e5 url('../images/home/live.jpg') no-repeat center;
+  background-size: cover;
+  &-list{
+    max-width: min(vw(920), 920px);
+    li:nth-last-child(1),
+    li:nth-last-child(2) {
+      border-bottom: none
+    }
+  }
+}
+.home-section-work {
+  margin-bottom: var(--home-sec-mb);
+  padding-top: min(vw(260), 260px);
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
+  min-height: 950px;
+  background: #e5e5e5 url('../images/home/work.jpg') no-repeat center;
+  background-size: cover;
+  &-list{
+    max-width: min(vw(920), 920px);
+    li:nth-last-child(1),
+    li:nth-last-child(2) {
+      border-bottom: none
+    }
+  }
+}
+.home-section-rest {
+  margin-bottom: var(--home-sec-mb);
+  padding-top: min(vw(260), 260px);
+  display: flex;
+  &__l{
+    width: 45vw;
+    padding: 0 min(vw(75), 75px);
+  }
+  &__r{
+    width: 55vw;
+    min-height: 760px;
+    background: #e5e5e5 url('../images/home/rest.jpg') no-repeat center;
+    background-size: cover;
+    
+  }
+  &-list{
+    max-width: min(vw(920), 920px);
+    li:nth-last-child(1),
+    li:nth-last-child(2) {
+      border-bottom: none
+    }
+  }
+}
+.home-section-custom-1 {
+  display: flex;
+  &__r{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 45vw;
+    padding: 0 min(vw(75), 75px);
+  }
+  &__l{
+    width: 55vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 760px;
+    background: #e9e9e9;
+    
+  }
+  
+  }
+  .home-section-custom-2 {
+    padding-top: min(vw(260), 260px);
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+    min-height: 780px;
+    background: #000 url('../images/home/custom-1--top.jpg') no-repeat center bottom;
+    background-size: cover;
+    &-list{
+      max-width: min(vw(920), 920px);
+      li:nth-last-child(1),
+      li:nth-last-child(2) {
+        border-bottom: none
+      }
+    }
+  }
+  .info-list-custom_2{
+    li{
+      color: #fff;
+    }
+  }
+  .home-section-appartments {
+    margin-bottom: var(--home-sec-mb);
+    padding-top: min(vw(260), 260px);
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+    min-height: 780px;
+    background: #e5e5e5 url('../images/home/app.jpg') no-repeat center;
+    background-size: cover;
+    &-list{
+      max-width: min(vw(920), 920px);
+      li:nth-last-child(1),
+      li:nth-last-child(2) {
+        border-bottom: none
+      }
+    }
+  }
