--- a/src/assets/styles/assets/base.scss
+++ b/src/assets/styles/assets/base.scss
@@ -30,6 +30,10 @@ body {
 	overflow-x: hidden;
 	font-size: 14px;
 }
+button{
+  font-family: $default-font;
+
+}
 
 body input, body textarea {
 	border: #666 1px solid;
