--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -126,6 +126,75 @@
   }
   
 }
+.resset{
+  padding: 0;
+  background-color: transparent;
+  border: none;
+}
+
+.main-button.main-button--size-m {
+  width: 148px;
+  height: 50px;
+}
+.main-button{
+  display: flex;
+  align-items: center;
+  &:hover{
+    @include from(1025px){
+
+      .main-button__ico{
+        use svg circle{
+          transform: scale(2.1);
+        }
+      }
+    }
+  }
+  .main-button-arrow{
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .main-button-wrap{
+    position: relative;
+    padding-left: 20px;
+    width: 70px;
+    height: 50px;
+    min-width: 70px;
+    min-height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__line{
+    width: 35px;
+    height: 1px;
+    background-color: #000;
+  }
+  &__circle{
+    width: 50px;
+    height: 50px;
+    min-width: 50px;
+    min-height: 50px;
+    display: flex;
+    border-radius: 50%;
+    background: #FDC60C;
+  }
+  &__ico{
+    margin-left: -2px;
+    width: 100%;
+    max-width: 10px;
+    height: 100%;
+    max-height: 15px;
+  }
+  &__text{
+    font-size: 12px;
+    line-height: 100%;
+    margin: 0px 0 0 20px;
+    font-weight: 400;
+    color: #000000;
+  }
+}
 
 @import './assets/templates'; // main style
 @import './pages/home.scss';
