--- a/src/pug/includes/mixins.pug
+++ b/src/pug/includes/mixins.pug
@@ -1,28 +1,19 @@
-mixin testCard(link, src, title, descr)
-  a(href=link).card-item
-    img.card-item__img(src=src alt='foto-1' title="title-foto")
-    h2.card-item__title=title
-    p.card-item__descr=descr
 
-mixin icon(icon, condition)
-  if(condition)
-    svg(class= icon  role="presentation")&attributes(attributes)
-      use(xlink:href="#"+ icon + "")
-  else
-    span(class='svg-wrap')&attributes(attributes)
-      svg(class="svg-icon icon--"+ icon + ""  role="presentation")
-        use(xlink:href="#"+ icon + "")
 mixin svg(icon)
     svg(class="icon--"+ icon + ""  role="presentation")&attributes(attributes)
       use(xlink:href="#icon-"+ icon + "")
 
-mixin link-blank(href)
-  a(herf=href rel="nofollow" target="_blank")
 mixin img(src)
   img(src='./assets/images/'+src+'' title="foto" alt="foto")&attributes(attributes)
 
 mixin btn(text)
-  img(type="button" class="button button-reset--default-styles")&attributes(attributes)
+  button(type="button")&attributes(attributes).resset.main-button
+    .main-button-wrap
+      .main-button-arrow.df.aic
+        span.main-button__line
+        +svg('button-arrow').main-button__ico
+      .main-button__circle
+    span(data-btn-submit-text).main-button__text= text
 
 mixin SelectBox(name, id, options)
   .u-select-box
@@ -49,9 +40,7 @@ mixin RangeSlider(options)
         input(id=option.id+"_min" class="js_"+option.id+"_min js-current-min" name=option.id+"_min" maxlength=option.max type="number" min=option.min value=option.min max=option.max)
         input(id=option.id+"_max" class="js_"+option.id+"_max js-current-max" name=option.id+"_max" maxlength=option.max type="number" min=option.min value=option.max max=option.max)
 
-        
-        
-        
+
         
 mixin infoItem(text, ico, color)
   li(class='info-list-item ' + color)
