--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -22,6 +22,7 @@
 @import '../../pug/components/form/form';
 @import '../../pug/components/toster/toster';
 @import '../../pug/components/popup/popup';
+@import '../../pug/components/map/map';
 
 .df{
   display: flex;
