--- a/src/assets/styles/pages/location.scss
+++ b/src/assets/styles/pages/location.scss
@@ -2,23 +2,25 @@
   .map__title{
     display: none;
   }
-  .page__content>*:nth-last-child(n+2) {
+  .page__content>*:nth-last-child(n+2):not(.breadcrumbs) {
     margin-bottom: 50px;
-
   }
-
+  @include to(575px){
+    .page__content>*:nth-last-child(n+2):not(.breadcrumbs) {
+      margin-bottom: 35px;
+    }
+  }
 }
 .double-side-block {
   --self-vert-padding:40px;
   --self-side-padding:80px;
   background: var(--color-white);
-
   border: 1px solid #DBDBDB;
   display: flex;
   flex-wrap: wrap;
   &>*{
       width: 50%;
-      padding: var(--self-vert-padding) var(--self-side-padding) ;
+      padding: var(--self-vert-padding) var(--self-side-padding);
   }
   &>img {
     object-fit: cover;
@@ -31,12 +33,28 @@
     width:46px;
     height: 44px;
   }
-  .subtitle{
+  &__subtitle{
     margin-bottom: 30px;
+  }
+  @include from(1680px){
+    &>img {
+      max-height: 55vh;
+    }
   }
   @include to(950px){
       --self-vert-padding:30px;
       --self-side-padding:60px;
+  }
+  @include to(768px){
+      --self-vert-padding:30px;
+      --self-side-padding:30px;
+  }
+  @include to(575px){
+      --self-vert-padding:20px;
+      --self-side-padding:20px;
+      &>*{
+          width: 100%;
+      }
   }
 }
 
