--- a/src/assets/styles/standart-elements.scss
+++ b/src/assets/styles/standart-elements.scss
@@ -1,12 +1,19 @@
 .page__content{
   padding-left: var( --page-side-fields);
   padding-right: var( --page-side-fields);
+  .breadcrumbs{
+    margin-top: 30px;
+    margin-bottom: 20px;
+  }
 }
 .page-title{
   font-weight: 300;
   font-size: 36px;
   line-height: 100%;
   text-align: center;
+  @include from(1680px){
+    font-size: 48px;
+  }
 }
 
 /* Наборной большой light */
@@ -22,13 +29,21 @@
   &.black {
     color: var(--color-technology);
   }
+  @include to(575px) {
+    font-size: 18px;
+  }
 }
+
 .bold {
   font-weight: 500;
 }
+
 .list-std {
   li {
     line-height: 1.7em;
+    list-style-position: inside;
+    text-indent: -26px;
+    padding-left: 26px;
   }
   li:nth-last-child(n+2){
     margin-bottom: 15px;
@@ -42,6 +57,58 @@
     margin-right: 20px;
     border-radius: 50%;
   }
+  @include to(575px) {
+    li:nth-last-child(n+2){
+      margin-bottom: 10px;
+    }
+  }
 }
 
+.breadcrumbs {
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 1em;
+    display: flex;
+    color: var(--color-design);
+    a {
+        text-decoration: none;
+    }
+    &-list {
+      display: flex;
+    }
+    &-item:not(:first-child):before {
+        content: '';
+        background-image: url("data:image/svg+xml,%3Csvg width='8' height='8' viewBox='0 0 8 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 8C8 3.58017 4.41983 0 0 0V8H8Z' fill='%230065FB'/%3E%3C/svg%3E%0A");
+        width: 8px;
+        height: 8px;
+        display: inline-block;
+        background-repeat: no-repeat;
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+    &-item {
+        &__link {
+            color: var(--color-design);
+            transition: .3s ease-in-out;
+        }
+        &__current--color {
+           color: #5B758D;
+        }
+    }
+    @include from(1680px) {
+        font-size: 14px;
+    }
+    @include from(769px) {
+        .breadcrumbs-item__link:hover {
+            // color: $color-gold;
+        }
+    }
+    @include to(768px) {
+        white-space: nowrap;
+        &-item:last-child {
+            text-overflow: ellipsis;
+            overflow: hidden;
+        }
+    }
+}
 
