--- a/src/pug/components/seo-block/seo-block.scss
+++ b/src/pug/components/seo-block/seo-block.scss
@@ -67,5 +67,9 @@
     margin-left: auto;
     margin-right: auto;
   }
+  @include to(575px){
+      padding-left: 0%;
+      padding-right: 0%;
+  }
 
 }
