ctc page desktop add

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -232,3 +232,5 @@
 @import './assets/templates'; // main style
 @import './pages/home.scss';
 @import './pages/location.scss';
+@import './pages/ctc.scss';
+
